--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,15 +12,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Get file changes
-      id: get_file_changes
-      uses: trilom/file-changes-action@v1.2.3
+    - name: Get all test, doc and src files that have changed
+      id: changed-files-yaml
+      uses: tj-actions/changed-files@v37
       with:
-        githubToken: ${{ secrets.GITHUB_TOKEN }}
-        plaintext: true
-    - name: Echo file changes
+        files_yaml: |
+          dockerfile:
+            - '**/Dockerfile'
+    - name: Run step if test file(s) change
+      # NOTE: The key has to start with the same key used above e.g. `test_(...)` | `doc_(...)` | `src_(...)` when trying to access the `any_changed` output.
+      if: steps.changed-files-yaml.outputs.test_any_changed == 'true'  
       run: |
-        echo Changed files: ${{ steps.get_file_changes.outputs.files }}
+        echo "One or more test file(s) has changed."
+        echo "List all the files that have changed: ${{ steps.changed-files-yaml.outputs.test_all_changed_files }
 #     - name: Docker Setup QEMU
 #       # You may pin to the exact commit or the version.
 #       # uses: docker/setup-qemu-action@2b82ce82d56a2a04d2637cd93a637ae1b359c0a7
