--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,7 @@ jobs:
         files_yaml: |
           dockerfile:
             - '**/Dockerfile'
+            - 'pytorch/**'
     - name: Run step if test file(s) change
       # NOTE: The key has to start with the same key used above e.g. `test_(...)` | `doc_(...)` | `src_(...)` when trying to access the `any_changed` output.
       if: steps.changed-files-yaml.outputs.test_any_changed == 'true'  
