--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
     - name: Get all test, doc and src files that have changed
       id: changed-files-yaml
       uses: tj-actions/changed-files@v37
