pytorch 2.0.1-cuda11.7-cudnn8-devel

--- a/pytorch/2.0.1-cuda11.7-cudnn8-devel/Dockerfile
+++ b/pytorch/2.0.1-cuda11.7-cudnn8-devel/Dockerfile
@@ -1,8 +1,6 @@
 # Desinged By Kuromesi
 # For Lab Containers
-ARG IMAGE_NAME=pytorch/pytorch:2.0.1-cuda11.7-cudnn8-devel
-
-FROM ${IMAGE_NAME}
+FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-devel
 
 ENV TZ Asia/Shanghai
 RUN echo 'root:root' |chpasswd
