--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,40 +6,38 @@ on:
   pull_request: {}
 
 jobs:
-
-  build:
-
+  diff:
     runs-on: ubuntu-latest
-
-    steps:
+    steps: 
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 
-    - name: Get all test, doc and src files that have changed
+    - name: Get all Dockerfile files that have changed
       id: changed-files-yaml
       uses: tj-actions/changed-files@v37
       with:
         files_yaml: |
           dockerfile:
             - '**/Dockerfile'
+  build:
+    runs-on: ubuntu-latest
+    if: needs.jobs.diff.steps.changed-files-yaml.outputs.dockerfile_any_changed == 'true'
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
     - name: Docker Setup QEMU
-      # You may pin to the exact commit or the version.
-      # uses: docker/setup-qemu-action@2b82ce82d56a2a04d2637cd93a637ae1b359c0a7
       uses: docker/setup-qemu-action@v2.2.0
     - name: Docker Setup Buildx
-      # You may pin to the exact commit or the version.
-      # uses: docker/setup-buildx-action@4c0219f9ac95b02789c1075625400b2acbff50b1
       uses: docker/setup-buildx-action@v2.9.1
     - name: Docker Login
-      # You may pin to the exact commit or the version.
-      # uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
       uses: docker/login-action@v2.2.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push the Docker image
       run: |
-        for file in ${{ steps.changed-files-yaml.outputs.dockerfile_all_changed_files }}; do
+        for file in ${{ needs.jobs.diff.steps.changed-files-yaml.outputs.dockerfile_all_changed_files }}; do
           dir=$(dirname $file)
           IMAGE=$(dirname $dir)
           TAG=$(basename $dir)
