change kindest-node go to amd64
Signed-off-by: Kuromesi <blackfacepan@163.com>

--- a/kindest-node/v1.26.4-go1.19/Dockerfile
+++ b/kindest-node/v1.26.4-go1.19/Dockerfile
@@ -7,7 +7,7 @@ ENV TZ Asia/Shanghai
 RUN apt update && apt install build-essential vim -y \
     && apt clean \
 	&& rm -rf /tmp/* /var/lib/apt/lists/* /var/tmp*
-RUN curl https://dl.google.com/go/go1.19.linux-arm64.tar.gz -o /tmp/go.tar.gz \
+RUN curl https://dl.google.com/go/go1.19.linux-amd64.tar.gz -o /tmp/go.tar.gz \
     && tar -C /usr/local -xzf /tmp/go.tar.gz \
     && rm /tmp/go.tar.gz && echo "export PATH=$PATH:/usr/local/go/bin" >> ~/.bashrc
 
