--- a/kindest-node/v1.26.4-go1.19/Dockerfile
+++ b/kindest-node/v1.26.4-go1.19/Dockerfile
@@ -4,7 +4,7 @@ ARG IMAGE_NAME=kindest/node:v1.26.4
 FROM ${IMAGE_NAME}
 
 ENV TZ Asia/Shanghai
-RUN apt update && apt install build-essential vim -y \
+RUN apt update && apt install build-essential vim git -y \
     && apt clean \
 	&& rm -rf /tmp/* /var/lib/apt/lists/* /var/tmp*
 RUN curl https://dl.google.com/go/go1.19.linux-amd64.tar.gz -o /tmp/go.tar.gz \
