--- a/.github/workflows/check-image.yml
+++ b/.github/workflows/check-image.yml
@@ -1,8 +1,7 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "dev" ]
+  pull_request: {}
 
 jobs:
   diff:
@@ -33,11 +32,6 @@ jobs:
       uses: docker/setup-qemu-action@v2.2.0
     - name: Docker Setup Buildx
       uses: docker/setup-buildx-action@v2.9.1
-    - name: Docker Login
-      uses: docker/login-action@v2.2.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push the Docker image
       run: |
         for file in ${{ needs.diff.outputs.dockerfile_all_changed_files  }}; do
@@ -46,5 +40,4 @@ jobs:
           TAG=$(basename $dir)
           echo "building image $IMAGE"
           docker build ${dir} --file ${file} --tag kuromesi/${IMAGE}:${TAG}
-          docker push kuromesi/${IMAGE}:${TAG}
         done
